--- a/portfolio/layouts/partials/nav.html
+++ b/portfolio/layouts/partials/nav.html
@@ -20,7 +20,7 @@
     <nav class="w3-content w3-center">
         <ul class="w3-bar ">
             <li class="w3-bar-item">
-                <a class="w3-text-grey w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="#">Boštjan Kamnik
+                <a class="w3-text-grey w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="/">Boštjan Kamnik
                 </a>
             </li>
             <li class="w3-bar-item ">
