--- a/portfolio/layouts/projects/projects.html
+++ b/portfolio/layouts/projects/projects.html
@@ -2,11 +2,11 @@
 
 <section class="w3-content w3-container w3-section">
     {{range .Pages}}
-    <div class="w3-col l4 m6 w3-mobile w3-padding-large">
+    <div class="portfolio-item w3-col m6 l4">
         <a href="{{.Permalink | relURL}}" class="link-plain-text">
-            <div class="w3-card w3-hover-shadow">
-                <img class="w3-image" src="{{.Params.Image | absURL}}" alt="">
-                <div class="w3-container w3-center">
+            <div class="card w3-center">
+                <img class="card-img" src="{{.Params.Image | absURL}}" alt="">
+                <div class="card-text-wrapper">
                     <h3 class="card-title">{{.Title}}</h3>
                     <hr/>
                     <p class="w3-opacity"> {{.Params.Description}}</p>
