add heading to projects page

--- a/portfolio/layouts/partials/nav.html
+++ b/portfolio/layouts/partials/nav.html
@@ -11,7 +11,7 @@
 <header id="header-mobile" class="w3-hide-medium w3-hide-large">
     <nav id="mobile-nav" class="w3-top">
         <div class="w3-topbar w3-border-black w3-display-container w3-container">
-            <h1>kamnik boštjan</h1>
+            <h1>{{.Params.Title}}</h1>
             <button class="w3-button w3-display-right w3-margin-right" onclick="toggleSidebarNav()"><i class="fa-solid fa-bars w3-xxlarge"></i></button>
         </div>
     </nav>
