--- a/portfolio/layouts/projects/projects.html
+++ b/portfolio/layouts/projects/projects.html
@@ -1,6 +1,6 @@
 {{define "main"}}
 
-<section class="w3-content w3-container w3-section">
+<section class="w3-content w3-container w3-section w3-padding-top-24">
     {{range .Pages}}
     <div class="portfolio-item w3-col m6 l4">
         <a href="{{.Permalink | relURL}}" class="link-plain-text">
