style single project page

--- a/portfolio/layouts/projects/single.html
+++ b/portfolio/layouts/projects/single.html
@@ -1,37 +1,17 @@
 {{ define "main" }}
-<style>
-    #navigation {
-        position: static;
-        background-image: none !important;
-        color: #4a4a4a;
-    }
-    
-    img {
-        border-radius: 7px;
-        width: 100%;
-        object-fit: contain;
-        margin: 15px 0;
-    }
-    
-    @media screen and (min-width:786px) {
-        img {
-            /* float: left; */
-            width: auto;
-            max-height: none;
-            max-height: 550px;
-            align-self: space-evenly;
-        }
-    }
-</style>
-
-<div class="container-fluid ">
-    <div class="mt-4 mt-md-5">
-        <div class="px-2 px-md-5">
-            <h1>{{.Title}}</h1>
-            <div class="d-flex flex-column">
-                {{.Content}}
-            </div>
-        </div>
+<section class="single-project w3-content w3-section">
+    <h1>{{.Title}}</h1>
+    <div class="project-details">
+        {{with index .Params.github 0}}
+        <a target="_blank" href="{{.}}">github</a>
+        {{end}}
+        {{with .Params.websiteUrl}}
+        <a target="_blank" href="{{.}}">{{.}}</a>
+        {{end}}
     </div>
-</div>
+    <hr/>
+    <div class="w3-container">
+        {{.Content}}
+    </div>
+</section>
 {{ end }}
