mobile: single project page img width is 100% centered

--- a/portfolio/layouts/projects/single.html
+++ b/portfolio/layouts/projects/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<section class="single-project w3-content w3-section">
+<section class="single-project w3-content w3-section w3-padding">
     <h1>{{.Title}}</h1>
     <div class="project-details">
         {{with index .Params.github 0}}
