--- a/portfolio/layouts/partials/nav.html
+++ b/portfolio/layouts/partials/nav.html
@@ -19,18 +19,22 @@
         </div>
     </nav>
 </header>
-<header id="header-primary" class="w3-hide-small">
+<header id="header-primary" class="w3-hide-small w3-animate-top" style="position: relative;">
+    <div class="" style="overflow: hidden; z-index: -1; position: absolute; top: 0px; left: 0; right: 0; bottom: 0; ">
+        <img src="/images/about/bricks-blue.webp" alt="" style="filter: opacity(15%) grayscale(); object-fit: cover; width: 100%; height: 100%;">
+    </div>
     <nav class="w3-content w3-center">
         <ul class="w3-bar ">
             <li class="w3-bar-item">
-                <a class="w3-text-grey w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="/">Boštjan Kamnik
+                <!-- TODO: active item is red -->
+                <a class="text-bold {{if .Page.IsHome }} w3-text-red {{else }} w3-text-grey {{end}} w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-orange" href="/">Boštjan Kamnik
                 </a>
             </li>
             <li class="w3-bar-item ">
-                <a class="w3-text-red w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black " href="/projects">projects</a>
+                <a class="text-bold {{if .Page.IsSection }} w3-text-red {{else }} w3-text-grey {{end}} w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-orange" href="/projects">projects</a>
             </li>
             <li class="w3-bar-item ">
-                <a class="w3-text-red w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="/#contact">contact</a>
+                <a class="text-bold w3-text-grey w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-orange" href="/#contact">contact</a>
             </li>
         </ul>
     </nav>
