--- a/portfolio/layouts/shortcodes/video.html
+++ b/portfolio/layouts/shortcodes/video.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div id="player-wrapper" class="{{ .Get 1 }}" style="width:50%; margin:auto"></div>
+    <div id="player-wrapper" class="{{ .Get 1 }}"></div>
   </div>
   
   <script 
