lay out contact page with css

--- a/portfolio/layouts/partials/footer.html
+++ b/portfolio/layouts/partials/footer.html
@@ -1,8 +1,5 @@
 <footer id="contact">
-	<div class="w3-content w3-center">
-		let's work together
-		<a href="" class="w3-btn"> <i class="fa-brands fa-linkedin w3-xxlarge"></i>
-		</a>
-		<a href="" class="w3-btn"> <i class="fa-solid fa-envelope w3-xxlarge"></i>
-	</div>
+    <div class="w3-content w3-center">
+        <p>bkamnik 2022</p>
+    </div>
 </footer>
