--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -77,23 +77,27 @@
 </div>
 {{end}}
 
-<section id="contact" class="w3-section">
-    <div class="w3-row w3-content">
-        <div class="w3-col l4">
-            <div style="border-radius: 4px; height: 325px; overflow: hidden; border-top-right-radius: 0px; border-bottom-right-radius: 0px;">
-                <img src="/images/about/bkamnik-profile.jpg" alt="" style="object-fit: cover; height: 100%; width: 100%;">
-            </div>
+<section id="contact" class="w3-content w3-padding-top-48">
+    <div class="contact-container">
+        <div class="contact-img-wrapper">
+            <img src="/images/about/bkamnik-profile.jpg" alt="" />
         </div>
-        <div class="w3-col l8">
-            <div style="position:relative; overflow: hidden;">
-                <img src="/images/about/red-n-orange.jpg" alt="" style="z-index: -1; position: absolute; left: 0; top: 0; bottom: 0; right: 0; object-fit:cover;">
-                <div class="w3-container w3-row-padding">
-                    <div class="w3-col l4 w3-center">
-                        <div style="border-radius: 4px; padding:5px 10px;  display: inline-block; margin:0 auto; position: relative; overflow: hidden;">
-                            <div class="w3-white w3-opacity" style="z-index: -1; position: absolute; left: 0; top: 0; right: 0; bottom: 0;"></div>
-                            <h3 class="w3-text-red text-bold">let's work together !</h3>
-                        </div>
-                    </div>
+        <div class="contact-details">
+            <img src="/images/about/red-n-orange.jpg" alt="" class="contact-bg">
+            <div class="contact-text-wrapper">
+                <h2>let's work together !</h2>
+                <p class="contact-details-item">
+                    <i class="fa-solid fa-phone w3-xlarge"></i>
+                    <span class="w3-large">+386 40 976 333</span>
+                </p>
+                <p class="contact-details-item">
+                    <i class="fa-solid fa-envelope w3-xlarge"></i>
+                    <span class="w3-large">mkamnikbostjan@gmail.com</span>
+                </p>
+                <hr class="w3-opacity-max"/>
+                <div class="contact-details-social">
+                    <a href="" class="w3-btn"> <i class="fa-brands fa-linkedin w3-xxlarge"></i>
+                    </a>
                 </div>
             </div>
         </div>
