--- a/portfolio/layouts/partials/footer.html
+++ b/portfolio/layouts/partials/footer.html
@@ -1,5 +1,3 @@
-<footer id="contact">
-    <div class="w3-content w3-center">
-        <p>bkamnik 2022</p>
-    </div>
+<footer>
+	<small>bkamnik 2022</small>
 </footer>
