--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -77,7 +77,7 @@
 </div>
 {{end}}
 
-<section id="contact" class="w3-content w3-padding-top-48">
+<section id="contact" class="w3-content w3-padding-top-48 w3-padding-48">
     <div class="contact-container">
         <div class="contact-img-wrapper">
             <img src="/images/about/bkamnik-profile.jpg" alt="" />
