--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -1,4 +1,3 @@
-
 .text-bold {
     font-weight: 600;
 }
@@ -27,19 +26,21 @@
 }
 
 .nav-item:hover {
-    color: hsl(26, 43%, 100%)!important;
-    border-bottom: 6px solid #4a4a4a !important;
+    color: hsl(26, 43%, 100%) !important;
+    border-bottom: 6px solid hsl(26, 43%, 100%) !important;
 }
 
-.nav-item-active{
+.nav-item {
+    /* border-bottom-color: hsl(120, 2%, 5%); */
+    border-bottom: 6px solid #4a4a4a !important;
+    color: #4a4a4a;
+}
+
+.nav-item-active {
     color: hsl(356, 100%, 45%);
     border-bottom: 6px solid rgb(255, 196, 120) !important;
 }
 
-.nav-item{
-    /* border-bottom-color: hsl(120, 2%, 5%); */
-    /* border-bottom: 6px solid rgb(61, 60, 60) !important; */
-}   
 .bg-focused {
     filter: opacity(45%) !important;
 }
@@ -247,14 +248,14 @@ p {
 /* --------------------------------- footer --------------------------------- */
 
 footer {
-    background-color: rgb(65, 67, 65);
+    background-color: #202020;
     text-align: center;
     padding: 10px;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 footer small {
-    align-self: center;
-    justify-self: center;
     color: rgba(255, 255, 255, 0.25);
 }
